<resources>
    <string name="app_name">Contacts_Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_users_list">Users List</string>
    <string name="menu_new_user">New User</string>
    <string name="menu_exit">Exit</string>

    <string name="title_activity_users__list">Users_ListActivity</string>

    <string name="alert_title">Exit</string>
    <string name="alert_mesage">Do you want to Exit from App?</string>
    <string name="alert_exit_mesage">Do you want to Exit from App?\n Go to Menu click on Exit</string>
    <string name="delete_alert_title">Delete</string>
    <string name="delete_alert_mesage">Do you want to Delete this Person?</string>
    <string name="alert_yes_btn">OK</string>
    <string name="alert_no_btn">Cancel</string>
    <string name="logout_success_msg">Exit Success</string>
    <string name="delete_success_msg">Person Deleted Successfully</string>
    <string name="delete_cancel_message">Person Safe Continue</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_mobile_number_1">Enter Mobile Number 1</string>
    <string name="enter_mobile_number_2">Enter Mobile Number 2</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="save">Save</string>
    <string name="radio_btn1_male">Male</string>
    <string name="radio_btn2_female">Female</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="firstName_error_msg">Please Enter your First Name</string>
    <string name="lastName_error_msg">Please Enter your Last Name</string>
    <string name="dateOfBirth_error_msg">Please Select/Enter your Date Of Birth</string>
    <string name="gender_error_msg">Please select your gender</string>

    <string name="firstName_length_error_msg">First Name should be atleast 3 Leters</string>
    <string name="lastName_length_error_msg">Last Name should be atleast 3 Leters</string>

    <string name="mobileNo1_error_msg">Please Enter your Mobile Number1</string>
    <string name="mobileNo2_error_msg">Please Enter your Mobile Number2</string>
    <string name="emailid_error_msg">Please Enter your Email Id</string>
    <string name="emailPatern_error_msg">Please Enter valid Email Id</string>

    <string name="mobileNo_length_error_msg">Mobile Number must be 10 digits</string>

    <string name="fullAddress_error_msg">Please Enter your Full Address</string>
    <string name="pincode_error_msg">Please Enter your Pincode</string>
    <string name="city_error_msg">Please Enter your City</string>
    <string name="state_error_msg">Please select your State</string>

    <string name="address_length_error_msg">Mobile Number atelast 3 Leters</string>
    <string name="pincode_length_error_msg">Mobile Number must be 6 digits</string>
    <string name="next">Next</string>

    <string-array name="array_states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh	</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadar and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
        <item>Puducherry</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_btn">Update</string>
    <string name="profile_list">Profiles List</string>
    <string name="user_profile">User Profile</string>
    <string name="sync_success_refresh_msg">sync success</string>

</resources>
