<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_radius">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_radius"
            android:orientation="vertical"
            android:padding="@dimen/card_radius"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Address "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fullAddress_address_fragment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_your_address"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:padding="@dimen/card_radius"
                android:textColor="#000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="Pincode "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pincode_address_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_pincode"
                android:inputType="phone"
                android:maxLength="6"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="City "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_city_address_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_city"
                android:inputType="text"
                android:maxLength="30"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="State "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/et_back_shape">
               <Spinner
                   android:id="@+id/spinner_address_fragment"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_marginBottom="@dimen/card_radius"
                   android:entries="@array/array_states"
                   android:inputType="phone"
                   android:paddingStart="5dp"
                   android:textColor="#000000"
                   android:textColorHint="#86000000"
                   android:layout_gravity="center_horizontal"
                   tools:ignore="RtlSymmetry" />
           </LinearLayout>

            <Button
                android:id="@+id/save_btn_address_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="save"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>