<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="First Name  "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_firstName_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:hint="First Name "
                android:inputType="text"
                android:maxLength="15"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="Last Name "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_lastName_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:hint="Last Name"
                android:inputType="text"
                android:maxLength="15"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="Date of Birth"
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_dateOfBirth_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:autofillHints=""
                android:background="@drawable/et_back_shape"
                android:clickable="true"
                android:drawableEnd="@drawable/calendar"
                android:editable="true"
                android:focusable="true"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="date"
                android:maxLength="10"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size"
                tools:ignore="UnusedAttribute" />

            <RadioGroup
                android:id="@+id/radioGroup_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Gender   "
                    android:textColor="#000"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_male_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_btn1_male"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/rb_female_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/radio_btn2_female"
                    android:textSize="@dimen/text_size" />
            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_radius"
            android:orientation="vertical"
            android:padding="@dimen/card_radius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Address "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fullAddress_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_your_address"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:padding="@dimen/card_radius"
                android:textColor="#000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="Pincode "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pincode_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_pincode"
                android:inputType="phone"
                android:maxLength="6"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:gravity="center_vertical"
                android:text="City "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_city_person_editActivty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:background="@drawable/et_back_shape"
                android:gravity="start"
                android:hint="@string/enter_city"
                android:inputType="text"
                android:maxLength="30"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="State "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_back_shape">
                <Spinner
                    android:id="@+id/spinner_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:entries="@array/array_states"
                    android:inputType="phone"
                    android:paddingStart="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#86000000"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_radius"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_radius"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:layout_weight="1"
                    android:text="Mobile No.1 "
                    android:textColor="#000"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_mobieNo1_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:layout_weight="1"
                    android:background="@drawable/et_back_shape"
                    android:hint="@string/enter_mobile_number_1"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#86000000"
                    android:textSize="@dimen/text_size"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Mobile No.2  "
                    android:textColor="#000"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/card_radius"
                    />

                <EditText
                    android:id="@+id/et_mobieNo2_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_back_shape"
                    android:hint="@string/enter_mobile_number_2"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#86000000"
                    android:textSize="@dimen/text_size"
                    android:layout_marginBottom="@dimen/card_radius"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/card_radius"
                    android:layout_weight="1"
                    android:text="Email Id "
                    android:textColor="#000"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_emailId_person_editActivty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_back_shape"
                    android:hint="@string/enter_email_id"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textColorHint="#86000000"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

                <Button
                android:id="@+id/update_btn_person_editActivty"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/card_radius"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="Update"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>
