<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="First Name  "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/card_radius"/>

            <EditText
                android:id="@+id/et_firstName_personal_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/et_back_shape"
                android:hint="First Name "
                android:inputType="text"
                android:maxLength="15"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"
                android:textColorHint="#86000000"
                android:layout_marginBottom="@dimen/card_radius"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Last Name "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/card_radius"
                />

            <EditText
                android:id="@+id/et_lastName_personal_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/et_back_shape"
                android:hint="Last Name"
                android:inputType="text"
                android:maxLength="15"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#86000000"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/card_radius"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="Date of Birth"
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/card_radius"
                />

            <EditText
                    android:id="@+id/et_dateOfBirth_personal_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/et_back_shape"
                    android:clickable="true"
                    android:drawableEnd="@drawable/calendar"
                    android:editable="true"
                    android:focusable="true"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="date"
                    android:maxLength="10"
                    android:padding="5dp"
                android:textSize="@dimen/text_size"
                    android:textColor="#000000"
                    android:textColorHint="#86000000"
                    tools:ignore="UnusedAttribute"
                    android:layout_marginBottom="@dimen/card_radius"
                />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Gender   "
                android:textColor="#000"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/card_radius"
                />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_btn1_male"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/card_radius"
                />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/radio_btn2_female"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/card_radius"
                />
        </RadioGroup>

        <Button
            android:id="@+id/save_btn_personal_fragment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/card_radius"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v7.widget.CardView>

    </ScrollView>